# MCP

./: CMakeLists.txt
.github/: copilot-instructions.md
docs/: README.md  VS_CODE_INTEGRATION.md
include/: json_rpc.h  mcp_logger.h  mcp_request_handler.h  mcp_server.h  stdio_adapter.h  transport_adapter.h
include/handlers/: call_tool_handler.h  initialize_handler.h  list_tools_handler.h  ping_handler.h
scripts/: debug_mcp.py  interactive_mcp_test.py  quick_echo_test.py  setup_verification.py  test_all_tools.py  test_client.py  test_echo_tool.py  test_initialization.py  test_mcp_communication.py  test_tools_list.py
src/: initialize_handler.cpp  json_rpc.cpp  list_tools_handler.cpp  main.cpp  mcp_server.cpp  stdio_adapter.cpp
src/handlers/: call_tool_handler.cpp  initialize_handler.cpp  ping_handler.cpp
